initialize first page

--- a/report/front/info.tex
+++ b/report/front/info.tex
@@ -4,19 +4,19 @@
 % -------------------------------------------------------
 
 \newcommand{\ThesisType}
-{پایان‌نامه‌ی کارشناسی ارشد}
+{پایان‌نامه‌ی کارشناسی}
 \newcommand{\ThesisTitle}
-{قالب استاندارد برای نگارش پایان‌نامه‌ها}
+{بازی تخصیص منابع عمومی با توجه رتبه‌بندی رفاهی افراد در جامعه}
 \newcommand{\ThesisAuthor}
-{حمید ضرابی‌زاده}
+{محمدصدرا حیدری - علیرضا ایلامی}
 \newcommand{\ThesisSupervisor}
-{استاد راهنمای پروژه}
+{جناب آقای دکتر محمدامین فضلی}
 \newcommand{\ThesisAdvisor}
 {استاد مشاور}
 \newcommand{\ThesisExaminer}
 {استاد ممتحن}
 \newcommand{\ThesisDate}
-{شهریور ۱۳۹۹}
+{شهریور ۱401}
 \newcommand{\ThesisDepartment}
 {دانشکده‌ی مهندسی کامپیوتر}
 \newcommand{\ThesisMajor}
