--- a/report/front/info.tex
+++ b/report/front/info.tex
@@ -6,7 +6,7 @@
 \newcommand{\ThesisType}
 {پایان‌نامه‌ی کارشناسی}
 \newcommand{\ThesisTitle}
-{بازی تخصیص منابع عمومی با توجه رتبه‌بندی رفاهی افراد در جامعه}
+{دسته‌بندی خانوارهای ایرانی براساس وضعیت رفاهی-اقتصادی و ارائه معیاری برای سنجش کیفیت دهک‌بندی}
 \newcommand{\ThesisAuthor}
 {محمدصدرا حیدری - علیرضا ایلامی}
 \newcommand{\ThesisSupervisor}
@@ -31,11 +31,12 @@
 
 \newcommand{\EnglishThesisType}{M.Sc. Thesis}
 
-\newcommand{\EnglishThesisTitle}{A Standard Template for Typesetting Theses in Persian}
+\newcommand{\EnglishThesisTitle}
+{Iranian Household Clustering and developing new metric to test qaulity of deciles}
 
-\newcommand{\EnglishThesisAuthor}{Hamid Zarrabi-Zadeh}
+\newcommand{\EnglishThesisAuthor}{Mohammad Sadra Heydari - Alireza Ilami}
 
-\newcommand{\EnglishThesisSupervisor}{Dr. Supervisor}
+\newcommand{\EnglishThesisSupervisor}{Dr. Mohammad Amin Fazli}
 
 \newcommand{\EnglishThesisDate}{September 2020}
 
