--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -34,13 +34,13 @@
 \input{front/info.tex}
 \input{front/template/title.tex}
 
-\input{front/template/besmellah.tex}
+%\input{front/template/besmellah.tex}
 
 % Uncomment the following line for adding signature page
 %\input{front/template/signatures.tex}
 
 %\input{front/acknowledge.tex}
-\input{front/abstract.tex}
+%\input{front/abstract.tex}
 
 
 % -------------------- Table of Contents --------------------
@@ -48,33 +48,36 @@
 
 \pagestyle{fancy}
 
-\tableofcontents \newpage
-\listoffigures \newpage
-\listoftables \newpage
+%\tableofcontents \newpage
+%\listoffigures \newpage
+%\listoftables \newpage
 
 %\pagenumbering{arabic}
 
 % -------------------- Chapters --------------------
 
-\include{chapters/guide}
-\include{chapters/writing}
-\include{chapters/introduction}
-\include{chapters/definitions}
-\include{chapters/literature}
-\include{chapters/results}
-\include{chapters/conclusions}
+%\include{chapters/guide}
+%\include{chapters/writing}
+%\include{chapters/introduction}
+%\include{chapters/definitions}
+%\include{chapters/literature}
+%\include{chapters/results}
+%\include{chapters/conclusions}
+
+
+\include{chapters/data}
 
 
 % -------------------- Appendices --------------------
 
-\begin{appendix}
-\include{chapters/appendix}
-\end{appendix}
+%\begin{appendix}
+%\include{chapters/appendix}
+%\end{appendix}
 
 % -------------------- Bibliography --------------------
 
 
-\input{bibs/bibs.tex}
+%\input{bibs/bibs.tex}
 
 
 % -------------------- English Pages --------------------
@@ -82,8 +85,8 @@
 
 \newgeometry{left=3cm,right=2.5cm}
 
-\input{front/dictionary}
-\input{front/abstract-eng.tex}
+%\input{front/dictionary}
+%\input{front/abstract-eng.tex}
 \input{front/template/title-eng.tex}
 
 
