--- a/code/notebooks/1. EDA.ipynb
+++ b/code/notebooks/1. EDA.ipynb
@@ -33,12 +33,14 @@
    "outputs": [],
    "source": [
     "farsi_font = FontProperties(\n",
-    "    fname='/home/sadra/.fonts/truetype/XBNilufar/Niloofar/XB Niloofar.ttf')"
+    "    fname='../../report/styles/fonts/XB Niloofar.ttf')\n",
+    "\n",
+    "farsi = lambda x: get_display(arabic_reshaper.reshape(str(x)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "extensive-defense",
    "metadata": {},
    "outputs": [
@@ -438,7 +440,7 @@
        "[1490991 rows x 48 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "modified-museum",
    "metadata": {},
    "outputs": [
@@ -460,7 +462,7 @@
        "500000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "f752707d",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "a7041aee",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1083,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1490991/1490991 [04:12<00:00, 5903.27it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████| 1490991/1490991 [02:08<00:00, 11637.59it/s]\n"
      ]
     }
    ],
@@ -1091,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "32bbd0d7",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,23 +1163,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "20fc6232",
+   "execution_count": 7,
+   "id": "threaded-evanescence",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df.groupby('ParentID').agg(lambda x: x.isna().sum())"
+    "def is_missing_value(pid: int, cols = ['postalcode', 'BirthDate_Jalali']):\n",
+    "    return data_df[data_df['ParentID'] == pid][cols].isna().sum().sum() > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "minor-writer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████| 500000/500000 [32:15<00:00, 258.31it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_hhs = set(i for i in tqdm(data_df['ParentID'].unique()) if is_missing_value(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "racial-fleece",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20929"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(missing_hhs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "sweet-humanity",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████| 1490991/1490991 [00:00<00:00, 2361630.02it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_data_df = data_df[[i not in missing_hhs for i in tqdm(data_df['ParentID'])]].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "typical-article",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_data_df.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "coordinated-panama",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID                                       0\n",
+       "ParentID                                 0\n",
+       "BirthDate                                0\n",
+       "GenderId                                 0\n",
+       "postalcode                               0\n",
+       "Provincename                             0\n",
+       "countyname                               0\n",
+       "isurban                                  0\n",
+       "AmCrdtr_95                               0\n",
+       "Amdbtr_95                                0\n",
+       "frstPrd_95                               0\n",
+       "lstPrd_95                                0\n",
+       "SmBnft_95                                0\n",
+       "AmCrdtr_96                               0\n",
+       "Amdbtr_96                                0\n",
+       "frstPrd_96                               0\n",
+       "lstPrd_96                                0\n",
+       "SmBnft_96                                0\n",
+       "AmCrdtr_97                               0\n",
+       "Amdbtr_97                                0\n",
+       "frstPrd_97                               0\n",
+       "lstPrd_97                                0\n",
+       "SmBnft_97                                0\n",
+       "AmCrdtr_98                               0\n",
+       "Amdbtr_98                                0\n",
+       "frstPrd_98                               0\n",
+       "lstPrd_98                                0\n",
+       "SmBnft_98                                0\n",
+       "Card98_Rials                             0\n",
+       "Card98_PaymentCount                      0\n",
+       "Card99_Rials                             0\n",
+       "Card99PaymentCount                       0\n",
+       "IsBiamrKhas                              0\n",
+       "IsMalool                                 0\n",
+       "IsBimePardaz_Sandoghha                   0\n",
+       "IsBazneshaste_Sandoghha                  0\n",
+       "IsMaliati_Shaghel                        0\n",
+       "daramad_Total_Rials                      0\n",
+       "Cars_Count                               0\n",
+       "CarsPrice_Sum                            0\n",
+       "Trips_Count_AirNotPilgrimage             0\n",
+       "Trips_Count_NotAirNotPilgrimage          0\n",
+       "Trips_Count_AirPilgrimage                0\n",
+       "Trips_Count_NotAirPilgrimage             0\n",
+       "HasMojavezSenfi                          0\n",
+       "Senf                               1384630\n",
+       "HasBimeSalamat                           0\n",
+       "BimeSalmat_Type                     599055\n",
+       "BirthDate_Jalali                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter_data_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "progressive-dairy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_data_df.fillna(-1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "interesting-patio",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_data_df.to_csv('../data/clean_refahdb.zip', compression={\n",
+    "    'method': 'zip', 'archive_name': 'clean_refahdb.csv'\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da249d8d",
+   "id": "prepared-elements",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "s"
-   ]
+   "source": []
   }
  ],
  "metadata": {
