Update and create sample

--- a/code/notebooks/01. EDA.ipynb
+++ b/code/notebooks/01. EDA.ipynb
@@ -473,6 +473,441 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "micro-special",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_hh = set(np.random.choice(data_df.ParentID.unique(), size=10_000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "lyric-review",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_df = data_df[[i in sample_hh for i in data_df['ParentID']]]\n",
+    "sample_df.to_csv('../data/1k_refah_db.zip', index=False, compression={\n",
+    "    'method': 'zip',\n",
+    "    'archive_name': '1k_refah_db.csv'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "modified-iceland",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>ParentID</th>\n",
+       "      <th>BirthDate</th>\n",
+       "      <th>GenderId</th>\n",
+       "      <th>postalcode</th>\n",
+       "      <th>Provincename</th>\n",
+       "      <th>countyname</th>\n",
+       "      <th>isurban</th>\n",
+       "      <th>AmCrdtr_95</th>\n",
+       "      <th>Amdbtr_95</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Cars_Count</th>\n",
+       "      <th>CarsPrice_Sum</th>\n",
+       "      <th>Trips_Count_AirNotPilgrimage</th>\n",
+       "      <th>Trips_Count_NotAirNotPilgrimage</th>\n",
+       "      <th>Trips_Count_AirPilgrimage</th>\n",
+       "      <th>Trips_Count_NotAirPilgrimage</th>\n",
+       "      <th>HasMojavezSenfi</th>\n",
+       "      <th>Senf</th>\n",
+       "      <th>HasBimeSalamat</th>\n",
+       "      <th>BimeSalmat_Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>385996899</td>\n",
+       "      <td>391863876</td>\n",
+       "      <td>1978-03-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6451967.0</td>\n",
+       "      <td>خوزستان</td>\n",
+       "      <td>شوشتر</td>\n",
+       "      <td>True</td>\n",
+       "      <td>207500000</td>\n",
+       "      <td>307500000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2633686968</td>\n",
+       "      <td>2633686968</td>\n",
+       "      <td>1995-02-05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9577153.0</td>\n",
+       "      <td>خراسان رضوي</td>\n",
+       "      <td>تربت جام</td>\n",
+       "      <td>True</td>\n",
+       "      <td>137500000</td>\n",
+       "      <td>110000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>795867494</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>روستاييان</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>312125928</td>\n",
+       "      <td>1981002597</td>\n",
+       "      <td>1970-05-13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3898155.0</td>\n",
+       "      <td>مرکزي</td>\n",
+       "      <td>خمين</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>روستاييان</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>70847160</td>\n",
+       "      <td>70847160</td>\n",
+       "      <td>1969-03-21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8318747.0</td>\n",
+       "      <td>اصفهان</td>\n",
+       "      <td>شاهين شهر و ميمه</td>\n",
+       "      <td>True</td>\n",
+       "      <td>135000000</td>\n",
+       "      <td>167500000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>913334400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>663191175</td>\n",
+       "      <td>9230116821</td>\n",
+       "      <td>2004-06-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>451879.0</td>\n",
+       "      <td>زنجان</td>\n",
+       "      <td>زنجان</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2500000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>کارکنان دولت</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490986</th>\n",
+       "      <td>4822361022</td>\n",
+       "      <td>4822361022</td>\n",
+       "      <td>1973-04-21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4384186.0</td>\n",
+       "      <td>گيلان</td>\n",
+       "      <td>رضوانشهر</td>\n",
+       "      <td>True</td>\n",
+       "      <td>7500000</td>\n",
+       "      <td>7500000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>855771499</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>روستاييان</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490987</th>\n",
+       "      <td>2816587107</td>\n",
+       "      <td>2816587107</td>\n",
+       "      <td>1942-07-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>371474.0</td>\n",
+       "      <td>قم</td>\n",
+       "      <td>قم</td>\n",
+       "      <td>True</td>\n",
+       "      <td>227500000</td>\n",
+       "      <td>375000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ايرانيان</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490988</th>\n",
+       "      <td>6680054253</td>\n",
+       "      <td>6680054253</td>\n",
+       "      <td>1945-09-11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5438134.0</td>\n",
+       "      <td>آذربايجان شرقي</td>\n",
+       "      <td>مرند</td>\n",
+       "      <td>False</td>\n",
+       "      <td>187500000</td>\n",
+       "      <td>187500000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>523117116</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>روستاييان</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490989</th>\n",
+       "      <td>4142421696</td>\n",
+       "      <td>4142421696</td>\n",
+       "      <td>1977-09-21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7169644.0</td>\n",
+       "      <td>فارس</td>\n",
+       "      <td>شيراز</td>\n",
+       "      <td>True</td>\n",
+       "      <td>327500000</td>\n",
+       "      <td>375000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1661819838</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>سايراقشار-نظام ارجاع 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1490990</th>\n",
+       "      <td>1424664495</td>\n",
+       "      <td>4711403091</td>\n",
+       "      <td>2005-05-12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8615835.0</td>\n",
+       "      <td>اصفهان</td>\n",
+       "      <td>شهرضا</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>بيمه سلامت همگاني</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1490991 rows × 48 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ID    ParentID   BirthDate  GenderId  postalcode  \\\n",
+       "0         385996899   391863876  1978-03-22         2   6451967.0   \n",
+       "1        2633686968  2633686968  1995-02-05         1   9577153.0   \n",
+       "2         312125928  1981002597  1970-05-13         2   3898155.0   \n",
+       "3          70847160    70847160  1969-03-21         1   8318747.0   \n",
+       "4         663191175  9230116821  2004-06-19         2    451879.0   \n",
+       "...             ...         ...         ...       ...         ...   \n",
+       "1490986  4822361022  4822361022  1973-04-21         1   4384186.0   \n",
+       "1490987  2816587107  2816587107  1942-07-01         1    371474.0   \n",
+       "1490988  6680054253  6680054253  1945-09-11         1   5438134.0   \n",
+       "1490989  4142421696  4142421696  1977-09-21         1   7169644.0   \n",
+       "1490990  1424664495  4711403091  2005-05-12         1   8615835.0   \n",
+       "\n",
+       "           Provincename        countyname isurban  AmCrdtr_95  Amdbtr_95  ...  \\\n",
+       "0               خوزستان             شوشتر    True   207500000  307500000  ...   \n",
+       "1           خراسان رضوي          تربت جام    True   137500000  110000000  ...   \n",
+       "2                 مرکزي              خمين   False           0          0  ...   \n",
+       "3                اصفهان  شاهين شهر و ميمه    True   135000000  167500000  ...   \n",
+       "4                 زنجان             زنجان    True     2500000          0  ...   \n",
+       "...                 ...               ...     ...         ...        ...  ...   \n",
+       "1490986           گيلان          رضوانشهر    True     7500000    7500000  ...   \n",
+       "1490987              قم                قم    True   227500000  375000000  ...   \n",
+       "1490988  آذربايجان شرقي              مرند   False   187500000  187500000  ...   \n",
+       "1490989            فارس             شيراز    True   327500000  375000000  ...   \n",
+       "1490990          اصفهان             شهرضا    True           0          0  ...   \n",
+       "\n",
+       "         Cars_Count  CarsPrice_Sum  Trips_Count_AirNotPilgrimage  \\\n",
+       "0                 0              0                             0   \n",
+       "1                 1      795867494                             0   \n",
+       "2                 0              0                             0   \n",
+       "3                 1      913334400                             0   \n",
+       "4                 0              0                             0   \n",
+       "...             ...            ...                           ...   \n",
+       "1490986           1      855771499                             0   \n",
+       "1490987           0              0                             0   \n",
+       "1490988           1      523117116                             0   \n",
+       "1490989           2     1661819838                             0   \n",
+       "1490990           0              0                             0   \n",
+       "\n",
+       "         Trips_Count_NotAirNotPilgrimage  Trips_Count_AirPilgrimage  \\\n",
+       "0                                      0                          0   \n",
+       "1                                      0                          0   \n",
+       "2                                      0                          0   \n",
+       "3                                      0                          0   \n",
+       "4                                      0                          0   \n",
+       "...                                  ...                        ...   \n",
+       "1490986                                0                          0   \n",
+       "1490987                                0                          1   \n",
+       "1490988                                0                          0   \n",
+       "1490989                                0                          0   \n",
+       "1490990                                0                          0   \n",
+       "\n",
+       "         Trips_Count_NotAirPilgrimage  HasMojavezSenfi  Senf  HasBimeSalamat  \\\n",
+       "0                                   0                0   NaN               0   \n",
+       "1                                   0                0   NaN               1   \n",
+       "2                                   0                0   NaN               1   \n",
+       "3                                   0                0   NaN               0   \n",
+       "4                                   0                0   NaN               1   \n",
+       "...                               ...              ...   ...             ...   \n",
+       "1490986                             0                0   NaN               1   \n",
+       "1490987                             0                0   NaN               1   \n",
+       "1490988                             0                0   NaN               1   \n",
+       "1490989                             0                0   NaN               1   \n",
+       "1490990                             0                0   NaN               1   \n",
+       "\n",
+       "                BimeSalmat_Type  \n",
+       "0                           NaN  \n",
+       "1                     روستاييان  \n",
+       "2                     روستاييان  \n",
+       "3                           NaN  \n",
+       "4                  کارکنان دولت  \n",
+       "...                         ...  \n",
+       "1490986               روستاييان  \n",
+       "1490987                ايرانيان  \n",
+       "1490988               روستاييان  \n",
+       "1490989  سايراقشار-نظام ارجاع 1  \n",
+       "1490990       بيمه سلامت همگاني  \n",
+       "\n",
+       "[1490991 rows x 48 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "brown-anime",
    "metadata": {},
